--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean": "rm -rf out",
     "test": "npm run spec-all",
     "lint": "prettier --check *",
-    "spec-all": "node --test ./out/*.spec.js",
+    "spec-all": "node --test ./out/*/*.spec.js",
     "coverage": "c8 --reporter lcov npm test"
   },
   "repository": {
