--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean": "rm -rf out",
     "test": "npm run spec-all",
     "lint": "prettier --check *",
+    "spelling": "cspell .",
     "spec-all": "node --test ./out/*/*.spec.js",
     "coverage": "c8 --reporter lcov npm test"
   },
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/node": "^20.8.8",
     "c8": "^8.0.1",
+    "cspell": "^7.3.8",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
