add npm watch command

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "prepare": "npm run compile",
     "compile": "tsc",
+    "watch": "tsc --watch",
     "clean": "rm -rf out",
     "test": "npm run spec-all",
     "lint": "prettier --check *",
