Adds error types (#5)
For proper error handling!

Also adds lock script for workspace repo friendliness

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compile": "tsc",
     "watch": "tsc --watch",
     "clean": "rm -rf out",
+    "lock": "npm install --no-workspaces --package-lock-only --ignore-scripts",
     "test": "npm run spec-all",
     "lint": "prettier --check *",
     "spelling": "cspell .",
