--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - run: echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' >> ~/.npmrc
       - run: npm ci
+      - run: npm run build
       - run: npm version $GITHUB_REF_NAME
       - run: npm publish --access public
