--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "./src/**/*"
   ],
   "scripts": {
-    "compile": "tsc",
+    "build": "tsc",
     "watch": "tsc --watch",
     "clean": "rm -rf out",
     "lock": "npm install --no-workspaces --package-lock-only --ignore-scripts",
